Bug 121289 - [CTTE] RenderTableCaption is never anonymous.
Summary: [CTTE] RenderTableCaption is never anonymous.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-13 04:21 PDT by Andreas Kling
Modified: 2013-09-13 05:17 PDT (History)
5 users (show)

See Also:


Attachments
Patch (2.47 KB, patch)
2013-09-13 04:21 PDT, Andreas Kling
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-09-13 04:21:21 PDT
[CTTE] RenderTableCaption is never anonymous.
Comment 1 Andreas Kling 2013-09-13 04:21:50 PDT
Created attachment 211534 [details]
Patch
Comment 2 Andreas Kling 2013-09-13 05:17:48 PDT
Comment on attachment 211534 [details]
Patch

Clearing flags on attachment: 211534

Committed r155686: <http://trac.webkit.org/changeset/155686>
Comment 3 Andreas Kling 2013-09-13 05:17:54 PDT
All reviewed patches have been landed.  Closing bug.