[CTTE] RenderTableCaption is never anonymous. <https://webkit.org/b/121289>

Reviewed by Antti Koivisto.

Hide element() and provide existingElement() instead, returning an Element&.

Canonical link: https://commits.webkit.org/139243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155686 268f45cc-cd09-0410-ab3c-d52691b4dbfc