Source/WebCore/rendering/RenderTableCaption.h
@@ -28,11 +28,16 @@ class RenderTable;
 
 class RenderTableCaption FINAL : public RenderBlockFlow {
 public:
-    explicit RenderTableCaption(Element*);
+    explicit RenderTableCaption(Element&);
     virtual ~RenderTableCaption();
+
+    Element& existingElement() const { return *RenderBlockFlow::element(); }
+
     virtual LayoutUnit containingBlockLogicalWidthForContent() const OVERRIDE;
     
 private:
+    void element() const WTF_DELETED_FUNCTION;
+
     virtual bool isTableCaption() const OVERRIDE { return true; }
 
     virtual void insertedIntoTree() OVERRIDE;
